- RingGroups now use strategies: Ring All (default), Hunt, Memory Hunt
- Separation of Devices and Users.  Devices are endpoints (ie: phones), and can be Fixed to a user, or Adhoc.  Users are extensions, with options like voicemail.  A user can log in to an Adhoc device by dialing *11, and log-off by dialing *12
- HINT priorities for FIXED devices
- Interface translated to French, German, Italian
- FOP .21

1.10.008

- Backup/Restore (schedule and restore backups)
- Extension Call Recording (inbound and outbound calls)
- Queue Call Recording (inbound to agents)
- Custom Trunks (use any Asterisk supported technology as a trunk)
- Remote Agents (join a Queue from any endpoint on a trunk)
- Outbound Route Password (require a password for certain outbound patterns)
- i18n (web interface can now be translated)
- ZAP trunk channels no longer hard-coded in retrieve_op_conf_from_mysql.pl
- *<exten> dials direct to voicemail()

1.10.007

- Added cvs2cl generated ChangeLog (see this for all changes and bug fixes)
- Added AMP Users (multi-department, multi-tenant)
- Added incremental upgrade script (install_amp)
- Use /etc/amportal.conf to tweak AMP to your environement (MySql credentials, web root, ip address, etc).  Apply changes with apply_conf.sh
- New Outbound Routes page to control trunks used for outbound calls based on dial patterns
- LCR using Outbound Routes
- Trunks page redone to support routing, adds dial rules to modify numbers per-trunk before dialing
- ENUM Trunks
- Queues support added
- Support for ZAP extensions
- More voicemail options added
- New AGI-based directory application to support both first and last name lookups and return to operator
- provide customization points for all AMP generated extension contexts.
- Upgrade to Flash Operator Panel 0.20
- Upgrade Asterisk-Stat to v2.0


1.10.006

- Use extensions_custom.conf for customizations.  Sample included.
- Add option to define outbound CallerID on trunks