@@ -14,6 +14,7 @@ $versions = array(
 		'1.10.008beta3',
 		'1.10.008',
 		'1.10.009beta1',
+		'1.10.009beta2',
 	);
 
 define("AMP_CONF", "/etc/amportal.conf");
