@@ -3,6 +3,7 @@
 - DID Routes re-written as Inbound Routing.  This allows for DID specific fax emails and call answering options.
 - RingGroups now use strategies: Ring All (default), Hunt, Memory Hunt
 - Separation of Devices and Users.  Devices are endpoints (ie: phones), and can be Fixed to a user, or Adhoc.  Users are extensions, with options like voicemail.  A user can log in to an Adhoc device by dialing *11, and log-off by dialing *12
+- Custom device technology support
 - HINT priorities for FIXED devices
 - Interface translated to French, German, Italian
 - FOP .21
